main.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans');
@import url('https://fonts.googleapis.com/css2?family=Poppins');



/* SCROLLBAR FOR CHROME */
::-webkit-scrollbar {
    width: 10px;
}

::-webkit-scrollbar-track {
    background-color: rgba(255, 255, 255, 0.1);
}

::-webkit-scrollbar-thumb {
    background-color: #6885bb;
    border-radius: 10px;
}


html {
    height: 100%;
    margin: 0;  
}

body {
    background-color: #282a36;
    font-family: 'Poppins', sans-serif;
    z-index: 0;
    height: 100%;
    margin: 0;
}

#page {
    min-height: 100%;
}

#navbar {
    background-color: #44475a;
    width: 100%;
    height: 50px;
    position: fixed;
    top: 0px;
    left: 0px;
    z-index: 99;
    box-shadow: 2px 4px 10px rgba(22, 22, 22, 0.301);
}

#logoWrapper {
    width: 50%;
    height: 100%;
    overflow: hidden;
    position: relative;
    top: 0;
    left: 0;
}

#logoImage {
    width: 38px;
    left: 30px;
    float: left;
    position: relative;
    top: 6px;
}

#logoText {
    color: #f5f5f5;
    font-size: 1.3rem;
    float: left;
    font-family: Open Sans;
    font-weight: 600;
    padding-left: 10px;
    margin-left: auto;
    position: relative;
    left: 30px;
    bottom: 1px;
}

#about {
    color: #cfcfcf;
    font-size: 1rem;
    font-weight: 600;
    float: right;
    position: relative;
    right: 40px;
    top: 17px;
    opacity: 0.9;
}

#about:hover {
    color: #c298fc;
    opacity: 1.0;
}

#projects {
    padding-bottom: 400px;
}


#projectsHeader {
    position: relative;
    top: 160px;
    text-align: center;
    color: #f8f8f8;
    font-size: 1.4rem;
}

#projectsGrid {
    display: grid;
    grid-column-gap: 15px;
    grid-row-gap: 15px;
    grid-template-columns: repeat(2, 1fr);
    grid-auto-rows: auto;
    padding: 10px;
    width: 550px;
    position: relative;
    top: 170px;
    margin: auto;
}

.item {
    aspect-ratio: 1/1;
    position: relative;
    top: 0;
    left: 0;
    max-width: 100%; 
    text-decoration: none;
    opacity: 0.6;
    transition: 0.3s;
}

.item:hover {
    opacity: 1.0;
    top: -8px;
}

.itemBackground {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-position: center;
    background-size: cover;
    border-radius: 8px;
    filter: contrast(0.9) brightness(0.8) saturate(0.8) grayscale(0.2);
}

.itemBackground::after {
    content: '';
    border: 1px solid #8b8b8b;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    position: absolute;
    border-radius: 8px;
}


.itemContent {
    display: flex;
}

.itemText {
    text-decoration: none;
    display: block;
    z-index: 1;
    padding: 1rem;
    font-size: 1.06rem;
    flex: 1;
}


.itemTitle {
    color: #111111;
}

a[href] .itemContent .itemTitle::after {
    content: '';
    background-image: url(assets/icons/tab.svg);
    width: 16px;
    height: 16px;
    display: inline-block;
    background-size: 100% 100%;
    opacity: 0.9;
    margin-left: 0.5em;
}


.itemDescription {
    color: #141414;
}

.link {
    text-decoration: none;
}

/*RUOKABOT*/

#ruokabot {
    width: 1200px;
    height: 100vh;
    clear: both;
    margin: auto;
    overflow: hidden;
    padding-bottom: 55px;
}

#iphone {
    width: 250px;
    position: relative;
    top: 65px;
    left: 95px;
}

#chef {
    width: 70px;
    height: 70px;
    position: relative;
    left: 525px;
    bottom: 359px;
}

#ruokaTitle {
    font-family: Open Sans;
    font-weight: 600;
    color: #f5f5f5;
    font-size: 2.2rem;
    position: relative;
    left: 540px;
    bottom: 380px;
}

#ruokaDescription {
    color: #dadada;
    font-family: 'Poppins', sans-serif;   
    font-size: 1.06rem;
    display: block;
    width: 500px;
    position: relative;
    left: 455px;
    bottom: 310px;
    overflow: hidden
}

#ruokaIcons {
    width: 500px;
    height: 50px;
    position: relative;
    bottom: 210px;
    left: 455px;
}

.ruokaLink {
    color: #cfcfcf;
    text-decoration: none;
    padding-right: 20px;
    opacity: 0.9;
}

.ruokaLink:hover {
    color: #c298fc;
    opacity: 1.0;
}

.ruokaLogo {
    width: 50px;
    height: 50px;
}

.ruokaLinkText {
    position: relative;
    bottom: 18px;
}

#githubLogo {
    -webkit-filter: invert(100%);
    filter: invert(100%);
    width: 44px;
    height: 44px;
    padding-bottom: 4px;
    padding-right: 6px;    
}


#discordLogo {
    filter: brightness(0.9)
}


/*OPINAIKA-BOT*/

#opinaika{
    width: 1200px;
    height: 116vh;
    clear: both;
    margin: auto;
    overflow: hidden;
    margin-bottom: -35px;
    margin-top: 5px;
}


#windowMain {
    height: 387px;
    position: relative;
    top: 52px;
    left: 160px;
    box-shadow: 2px 4px 10px rgba(22, 22, 22, 0.534);
}

#windowSettings {
    height: 342px;
    position: relative;
    top: 52px;
    left: 190px;
    box-shadow: 2px 4px 10px rgba(22, 22, 22, 0.534);
}


#opinaikaTitle {
    font-family: Open Sans;
    font-weight: 600;
    color: #f5f5f5;
    font-size: 1.88rem;
    position: relative;
    top: 50px;
    text-align: center;
}

#opinaikaLogo {
    float: left;
    width: 72px;
    position: relative;
    top: 55px;
    left: 470px;
    display: block;
}


#opinaikaIcons {
    width: 490px;
    position: relative;
    top: 60px;
    left: 390px;
    
}

#opinaikaGithubWrapper {
    color: #cfcfcf;
    text-decoration: none;
    padding-right: 20px;
    opacity: 0.9;
}

#opinaikaGithubWrapper:hover {
    color: #c298fc;
    opacity: 1.0;
}


#opinaikaGithubReleaseWrapper {
    float: right;
    color: #cfcfcf;
    text-decoration: none;
    padding-right: 20px;
    opacity: 0.9;
}

#opinaikaGithubReleaseWrapper:hover {
    color: #c298fc;
    opacity: 1.0;
}


.opinaikaLinkText {
    position: relative;
    bottom: 12px;
    padding-left: 4px;
    font-size: 1rem;
}

.opinaikaGithubLogo {
    -webkit-filter: invert(100%);
    filter: invert(100%);
    width: 38px;
    height: 38px;
}


/*FOOTER*/

#footer {
    margin-top: 50px;
    height: 140px;
    width: 100%;
    background: #44475A;
}

#footerContainer {
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: space-between;
    overflow: hidden;
    clear: both;
    margin: 0;
}


#footerLeftWrapper {
    width: 300px;
    /*background-color:#637D74;*/
}

#footerMiddleWrapper {
    width: 300px;
    /*background-color: #B9A997;*/
}

#footerRightWrapper {    
    width: 300px;
    /*background-color: #BCDBDB;*/
}


#footerIllustration {
    width: 150px;
    position: relative;
    left: 75px;
    top: 15px;
}

.footerIcon {
    width: 32px;
    height: 32px;
    text-decoration: none;
    position: relative;
    left: 140px;
    top: 90px;
    margin-right: 10px;
    filter: contrast(0.8) brightness(0.9) saturate(0.7) grayscale(0.3);
}

.footerIcon:hover {
    filter: contrast(1.0) brightness(0.9) saturate(0.9) grayscale(0);
}


#footerCopyright {
    color: #f5f5f5;
    opacity: 0.35;
    font-size: 0.85rem;
    position: relative;
    left: 15px;
    top: 108px;
}


/* MOBILE */

@media only screen and (max-width: 1040px) {
    
    #projects {
        padding-bottom: 180px;
    }
    
    #projectsHeader {
        position: relative;
        top: 90px;
        font-size: 1.25rem;
    }

    #projectsGrid {
        grid-template-columns: repeat(1, 1fr);
        width: 80%;
        max-width: 340px;
        position: relative;
        top: 105px;
    }
    
    #footer {
        margin-top: 50px;
        height: 220px;
        max-width: 1040px;
    }
    
    #footerLeftWrapper {
        width: 1/3%;
        /*background-color:#637D74;
    }
    
    #footerMiddleWrapper {
        width: 1/3%;
        /*background-color: #B9A997;*/
    }
    
    #footerRightWrapper {    
        width: 1/3%;
        /*background-color: #BCDBDB;*/
    }
    #footerIllustration {
        width: 160px;
        position: relative;
        left: 0;
        top: 50px;
    }
    
    .footerIcon {
        float: right;
        width: 32px;
        height: 32px;
        left: -5px;
        top: 170px;
        margin-right: 5px;
    }
    
    #footerCopyright {
        float: left;
        color: #ff0000;
        opacity: 0.5;
        font-size: 0.8rem;
        top: 170px;
        left: 5px;
        display: block;
    }
}

